refactor: use element module

--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.3.3",
-    "element-plus": "^2.3.2"
+    "@nuxt/kit": "^3.3.3"
   },
   "devDependencies": {
+    "@element-plus/nuxt": "^1.0.4",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxt/module-builder": "^0.2.1",
     "@nuxt/schema": "^3.3.3",
