--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "l-min",
-  "version": "1.0.14",
+  "version": "1.0.18",
   "description": "My new Nuxt module",
   "repository": "your-org/l-min",
   "license": "MIT",
@@ -28,10 +28,10 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.3.3"
+    "@nuxt/kit": "^3.3.3",
+    "element-plus": "^2.3.3"
   },
   "devDependencies": {
-    "@element-plus/nuxt": "^1.0.4",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxt/module-builder": "^0.2.1",
     "@nuxt/schema": "^3.3.3",
